[package]
name = "mortie"
version = "0.8.4"
edition = "2021"
authors = ["Shane Grigsby (espg) <refuge@rocktalus.com>"]
description = "Rust-accelerated morton indexing for HEALPix grids"
license = "MIT"

[lib]
name = "mortie_rustie"
crate-type = ["cdylib", "rlib"]
path = "src_rust/src/lib.rs"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
numpy = "0.22"
rayon = "1.10"
healpix = "0.3.3"
smallvec = "1"
arrow = { version = "53", features = ["ffi"] }

[dev-dependencies]
criterion = { version = "4.3.0", package = "codspeed-criterion-compat" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "morton_bench"
harness = false
path = "src_rust/benches/morton_bench.rs"

[[bench]]
name = "coverage_bench"
harness = false
path = "src_rust/benches/coverage_bench.rs"

[[bench]]
name = "decimal_morton_bench"
harness = false
path = "src_rust/benches/decimal_morton_bench.rs"
