[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mortie"
dynamic = ["version"]
description = "Morton numbering and indexing for healpix grids"
authors = [
  { name = "Shane Grigsby (espg)", email = "refuge@rocktalus.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["healpix", "geohashing", "morton index"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"  # Rust bindings use abi3-py310
dependencies = [
  "numpy>=1.20",
]

[project.urls]
"Homepage" = "https://github.com/espg/mortie"
"Bug Tracker" = "https://github.com/espg/mortie/issues"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
]
bench = [
  "pytest",
  "pytest-cov>=4.0",
  "pytest-codspeed>=4.3.0",
]
docs = [
  # Runtime deps for the example notebooks (examples/*.ipynb).
  "jupyterlab>=4.0",
  "notebook>=7.0",
  "ipykernel>=6.0",
  "matplotlib>=3.7",
  "shapely>=2.0",
  "geopandas>=0.14",
  "pyogrio>=0.7",        # geopackage backend for geopandas
  "earthaccess>=0.10",   # NASA Earthdata access (CMR / DAAC auth)
  "cartopy>=0.22",       # polar-stereographic plots for Antarctic data
  "healpy>=1.17",        # hp.boundaries / hp.vec2ang for cell rendering
  "requests>=2.31",
  "ipywidgets>=8.0",     # interactive slider in the Denman velocity notebook
  "xarray>=2024.1",      # NetCDF-4 reading for NSIDC-0761 velocity grids
  "h5netcdf>=1.3",       # backend for cloud-friendly xarray opens
  "netCDF4>=1.6",        # fallback NetCDF backend
  "pyproj>=3.6",         # EPSG:3031 <-> lat/lon reprojection of velocity pixels
  "scipy>=1.11",         # cartopy image-transform dependency
]

[tool.pytest.ini_options]
testpaths = ["mortie/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=mortie",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.maturin]
python-source = "."
module-name = "mortie._rustie"
bindings = "pyo3"
features = ["pyo3/extension-module"]
